@@ -1,0 +1,7 @@
+module Logging
+  module Appenders
+    class Airbrake
+      VERSION = "0.0.2"
+    end
+  end
+end
